--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@radix-ui/react-avatar": "^1.1.0",
         "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-navigation-menu": "^1.2.0",
         "@radix-ui/react-separator": "^1.1.0",
