--- a/package.json
+++ b/package.json
@@ -33,8 +33,13 @@
         "clsx": "^2.1.1",
         "cmdk": "1.0.0",
         "embla-carousel-react": "^8.2.1",
+        "justd-icons": "^1.4.44",
         "lucide-react": "^0.438.0",
+        "react-aria-components": "^1.3.3",
+        "react-hot-toast": "^2.4.1",
         "tailwind-merge": "^2.5.2",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwind-variants": "^0.2.1",
+        "tailwindcss-animate": "^1.0.7",
+        "tailwindcss-react-aria-components": "^1.1.5"
     }
 }
