--- a/package.json
+++ b/package.json
@@ -33,10 +33,14 @@
         "clsx": "^2.1.1",
         "cmdk": "1.0.0",
         "embla-carousel-react": "^8.2.1",
+        "framer-motion": "^11.5.4",
+        "input-otp": "^1.2.4",
         "justd-icons": "^1.4.44",
         "lucide-react": "^0.438.0",
+        "react-aria": "^3.34.3",
         "react-aria-components": "^1.3.3",
         "react-hot-toast": "^2.4.1",
+        "sonner": "^1.5.0",
         "tailwind-merge": "^2.5.2",
         "tailwind-variants": "^0.2.1",
         "tailwindcss-animate": "^1.0.7",
