--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-aria": "^3.34.3",
         "react-aria-components": "^1.3.3",
         "react-hot-toast": "^2.4.1",
+        "react-stately": "^3.32.2",
         "sonner": "^1.5.0",
         "tailwind-merge": "^2.5.2",
         "tailwind-variants": "^0.2.1",
